--- a/gallery.html
+++ b/gallery.html
@@ -502,7 +502,8 @@
         <div class="flex items-center space-x-2">
             <img class="h-16 w-14" src="/images/psypan-logo-transparent.png" alt="Psyche Panacea"
                 style="height: 80px; width: 80px;">
-            <div class="text-2xl font-bold text-primary">Psyche Panacea</div>
+            <div class="text-2xl font-bold text-primary"
+                style="font-family: 'Playfair Display', serif; font-size: 2rem;">Psyche Panacea</div>
         </div>
         <nav class="hidden md:flex items-center space-x-6">
             <a href="index.html" class="text-gray-700 hover:text-primary transition-colors px-2 py-1">Home</a>
@@ -659,7 +660,8 @@
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-start">
                     <!-- Left half: Map -->
-                    <div class="w-full h-full map-container rounded-xl overflow-hidden border-2 border-blue-700 shadow-lg">
+                    <div
+                        class="w-full h-full map-container rounded-xl overflow-hidden border-2 border-blue-700 shadow-lg">
                         <iframe
                             src="https://maps.google.com/maps?q=28.467519771527627,77.03697016794533&z=15&output=embed"
                             width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen loading="lazy"
