--- a/about-us.html
+++ b/about-us.html
@@ -1052,7 +1052,8 @@
     <div class="flex items-center space-x-2">
       <img class="h-16 w-14" src="/images/psypan-logo-transparent.png" alt="Psyche Panacea"
         style="height: 80px; width: 80px;">
-      <div class="text-2xl font-bold text-primary">Psyche Panacea</div>
+      <div class="text-2xl font-bold text-primary" style="font-family: 'Playfair Display', serif; font-size: 2rem;">
+        Psyche Panacea</div>
     </div>
 
     <nav class="hidden md:flex items-center space-x-6">
