--- a/admin.html
+++ b/admin.html
@@ -413,7 +413,8 @@
           </div>
         </div>
         <h2 class="text-3xl font-bold text-white mb-2">Admin Panel</h2>
-        <p class="text-blue-300">Psyche Panacea Content Management</p>
+        <p class="text-blue-300" style="font-family: 'Playfair Display', serif; font-size: 2rem;">Psyche Panacea Content
+          Management</p>
       </div>
 
       <form id="login-form" class="space-y-6">
