--- a/contact-career.html
+++ b/contact-career.html
@@ -578,7 +578,8 @@
     <div class="flex items-center space-x-2">
       <img class="h-16 w-14" src="/images/psypan-logo-transparent.png" alt="Psyche Panacea"
         style="height: 80px; width: 80px;">
-      <div class="text-2xl font-bold text-primary">Psyche Panacea</div>
+      <div class="text-2xl font-bold text-primary" style="font-family: 'Playfair Display', serif; font-size: 2rem;">
+        Psyche Panacea</div>
     </div>
     <nav class="hidden md:flex items-center space-x-6">
       <a href="index.html" class="text-gray-700 hover:text-primary transition-colors px-2 py-1">Home</a>
