--- a/admin.html
+++ b/admin.html
@@ -772,7 +772,7 @@
 
     // Admin credentials (hashed with CryptoJS)
     const ADMIN_USERNAME = CryptoJS.SHA256("admin123").toString();
-    const ADMIN_PASSWORD = CryptoJS.SHA256("admin@123").toString();
+    const ADMIN_PASSWORD = CryptoJS.SHA256("Codingsite@25").toString();
 
     // Login state management
     let loginAttempts = 3;
