--- a/admin.html
+++ b/admin.html
@@ -1512,7 +1512,7 @@
             document.getElementById('testimonial-role').value = testimonial.role || '';
             document.getElementById('testimonial-text').value = testimonial.text || '';
             document.getElementById('testimonial-rating').value = testimonial.rating || 4;
-            document.getElementById('testimonial-photo').value = testimonial.photoURL || '';
+            document.getElementById('testimonial-photo').value = testimonial.photoURL || 'https://i.pinimg.com/736x/98/1d/6b/981d6b2e0ccb5e968a0618c8d47671da.jpg';
             document.getElementById('save-testimonial').textContent = 'Update Testimonial';
             document.getElementById('cancel-testimonial-edit').classList.remove('hidden');
             document.getElementById('testimonial-form').scrollIntoView({ behavior: 'smooth' });
