--- a/admin.html
+++ b/admin.html
@@ -1446,7 +1446,7 @@
         role,
         text,
         rating: parseInt(rating) || 4,
-        photoURL: photoURL || '',
+        photoURL: photoURL || 'https://i.pinimg.com/736x/98/1d/6b/981d6b2e0ccb5e968a0618c8d47671da.jpg',
         createdAt: firebase.firestore.FieldValue.serverTimestamp()
       };
       const saveBtn = document.getElementById('save-testimonial');
