--- a/gallery.html
+++ b/gallery.html
@@ -1615,7 +1615,7 @@
                     'Services': 'services.html',
                     'Contact': 'contact.html',
                     'Gallery': 'gallery.html',
-                    'Global Programs': 'https://psychepan-mba.netlify.app'
+                    'Global Programs': 'https://psyche-mba.netlify.app'
                 };
 
                 // Main menu options
