--- a/mba/index.html
+++ b/mba/index.html
@@ -3863,13 +3863,13 @@
 
                         setTimeout(() => {
                             if (!navigated) {
-                                window.location.href = 'https://psychepan.netlify.app/services.html';
+                                window.location.href = 'https://psypanconsulting.com/services';
                             }
                         }, 600);
                         return;
                     }
 
-                    window.location.href = 'https://psychepan.netlify.app/services.html';
+                    window.location.href = 'https://psypanconsulting.com/services';
                 });
             })();
 
