--- a/services.html
+++ b/services.html
@@ -1293,7 +1293,7 @@
         <button class="tab-button" data-tab="assistance" role="tab" aria-selected="false">Employee Assistance</button>
         <button class="tab-button" data-tab="outbound" role="tab" aria-selected="false">Outbound Training</button>
         <button class="tab-button" data-tab="soft-skills" role="tab" aria-selected="false">Offsites</button>
-        <a class="tab-button" href="https://psychepan-mba.netlify.app" aria-selected="false">Global MBA</a>
+        <a class="tab-button" href="https://psyche-mba.netlify.app" aria-selected="false">Global MBA</a>
       </div>
     </div>
   </div>
@@ -3447,7 +3447,7 @@
         'Services': 'services.html',
         'Contact': 'contact.html',
         'Gallery': 'gallery.html',
-        'Global Programs': 'https://psychepan-mba.netlify.app'
+        'Global Programs': 'https://psyche-mba.netlify.app'
       };
 
       // Main menu options
@@ -3455,8 +3455,8 @@
         { id: 1, label: 'Services Offered', icon: '🌐' },
         { id: 2, label: 'Management Trainings', icon: '📊' },
         { id: 3, label: 'Global Executive Devp Programs', icon: '🌍' },
-        { id: 4, label: 'Emp Engagement', icon: '👥' },
-        { id: 5, label: 'Emp Assistance', icon: '🤝' },
+        { id: 4, label: 'Empolyee Engagement', icon: '👥' },
+        { id: 5, label: 'Employee Assistance', icon: '🤝' },
         { id: 6, label: 'OBT Training', icon: '🏕️' },
         { id: 7, label: 'Offsites', icon: '🏞️' },
         { id: 8, label: 'Contact Us', icon: '📞' }
