--- a/blogs.html
+++ b/blogs.html
@@ -2415,7 +2415,7 @@
         'Services': 'services.html',
         'Contact': 'contact.html',
         'Gallery': 'gallery.html',
-        'Global Programs': 'https://psychepan-mba.netlify.app'
+        'Global Programs': 'https://psyche-mba.netlify.app'
       };
 
       // Main menu options
@@ -2423,8 +2423,8 @@
         { id: 1, label: 'Services Offered', icon: '🌐' },
         { id: 2, label: 'Management Trainings', icon: '📊' },
         { id: 3, label: 'Global Executive Devp Programs', icon: '🌍' },
-        { id: 4, label: 'Emp Engagement', icon: '👥' },
-        { id: 5, label: 'Emp Assistance', icon: '🤝' },
+        { id: 4, label: 'Employee Engagement', icon: '👥' },
+        { id: 5, label: 'Employee Assistance', icon: '🤝' },
         { id: 6, label: 'OBT Training', icon: '🏕️' },
         { id: 7, label: 'Offsites', icon: '🏞️' },
         { id: 8, label: 'Contact Us', icon: '📞' }
